--- a/style.css
+++ b/style.css
@@ -18,3 +18,11 @@ body {
     transform: translate(-50%, -50%);
     width: 660px;
 }
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+    text-align: center;
+  }
